--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -3,6 +3,8 @@ title: "DSCI 310: Historical Horse Population in Canada"
 author: "Tiffany Timbers & Jordan Bourak"
 format: html
 editor: source
+
+bibliography: references.bib
 ---
 
 ```{python}
@@ -20,23 +22,21 @@ between 1906 and 1972 for each province.
 
 Horse population data were sourced from the 
 [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) 
-(Government of Canada, 2017a and Government of Canada, 2017b).
+(@horses1, @horses2).
 
 ## Methods
 
-The Python programming language (Van Rossum and Drake 2009)
+The Python programming language (@Python)
 and the following Python packages were used to perform the analysis: 
-pandas (McKinney 2010), altair (VanderPlas 2018), click (Team 2020), 
-as well as Quarto (Allaire et al. 2022). 
-*Note: this report is adapted from Timbers (2020).* 
+pandas (@pandas), altair (@altair), click (@click), 
+as well as Quarto (@Allaire_Quarto_2022). 
+*Note: this report is adapted from Timbers (@ttimbers-horses).* 
 
 ## Results
 
-![](../results/horse_pops_plot.png)
+![Horse populations for all provinces in Canada from 1906 - 1972.](../results/horse_pops_plot.png){#fig-pop}
 
-Figure 1: Horse populations for all provinces in Canada from 1906 - 1972.
-
-We can see from Figure 1 that Ontario, Saskatchewan and Alberta 
+We can see from @fig-pop that Ontario, Saskatchewan and Alberta 
 have had the highest horse populations in Canada. 
 All provinces have had a decline in horse populations since 1940. 
 This is likely due to the rebound of the Canadian automotive industry 
@@ -47,11 +47,12 @@ to further support this hypothesis.
 
 Suppose we were interested in looking in more closely at the province 
 with the highest spread (in terms of standard deviation) of horse populations. 
-We present the standard deviations in Table 1.
-
-Table 1. Standard deviation of historical (1906-1972) horse populations for each Canadian province.
+We present the standard deviations in @tbl-sd.
 
 ```{python}
+#| label: tbl-sd
+#| tbl-cap: Standard deviation of historical (1906-1972) horse populations for each Canadian province.
+
 horses_sd_table = pd.read_csv("../results/horses_sd.csv")
 largest_sd = horses_sd_table['Province'].values[0]
 Markdown(horses_sd_table.to_markdown(index = False))
