--- a/reports/qmd_example.qmd
+++ b/reports/qmd_example.qmd
@@ -5,6 +5,8 @@ format: html
 editor: source
 
 bibliography: references.bib
+execute:
+    echo: false
 ---
 
 ```{python}
@@ -15,43 +17,28 @@ from tabulate import tabulate
 
 ## Aim
 
-This project explores the historical population of horses in Canada 
-between 1906 and 1972 for each province.
+This project explores the historical population of horses in Canada between 1906 and 1972 for each province.
 
 ## Data
 
-Horse population data were sourced from the 
-[Government of Canada's Open Data website](http://open.canada.ca/en/open-data) 
-(@horses1, @horses2).
+Horse population data were sourced from the [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) (@horses1, @horses2).
 
 ## Methods
 
-The Python programming language (@Python)
-and the following Python packages were used to perform the analysis: 
-pandas (@pandas), altair (@altair), click (@click), 
-as well as Quarto (@Allaire_Quarto_2022). 
-*Note: this report is adapted from Timbers (@ttimbers-horses).* 
+The Python programming language (@Python) and the following Python packages were used to perform the analysis: pandas (@pandas), altair (@altair), click (@click), as well as Quarto (@Allaire_Quarto_2022). *Note: this report is adapted from Timbers (@ttimbers-horses).*
 
 ## Results
 
 ![Horse populations for all provinces in Canada from 1906 - 1972.](../results/horse_pops_plot.png){#fig-pop}
 
-We can see from @fig-pop that Ontario, Saskatchewan and Alberta 
-have had the highest horse populations in Canada. 
-All provinces have had a decline in horse populations since 1940. 
-This is likely due to the rebound of the Canadian automotive industry 
-after the Great Depression and the Second World War. 
-An interesting follow-up visualisation would be car sales per year 
-for each Province over the time period visualised above 
-to further support this hypothesis.
+We can see from @fig-pop that Ontario, Saskatchewan and Alberta have had the highest horse populations in Canada. All provinces have had a decline in horse populations since 1940. This is likely due to the rebound of the Canadian automotive industry after the Great Depression and the Second World War. An interesting follow-up visualisation would be car sales per year for each Province over the time period visualised above to further support this hypothesis.
 
-Suppose we were interested in looking in more closely at the province 
-with the highest spread (in terms of standard deviation) of horse populations. 
-We present the standard deviations in @tbl-sd.
+Suppose we were interested in looking in more closely at the province with the highest spread (in terms of standard deviation) of horse populations. We present the standard deviations in @tbl-sd.
 
 ```{python}
 #| label: tbl-sd
 #| tbl-cap: Standard deviation of historical (1906-1972) horse populations for each Canadian province.
+#| echo: false
 
 horses_sd_table = pd.read_csv("../results/horses_sd.csv")
 largest_sd = horses_sd_table['Province'].values[0]
@@ -64,10 +51,8 @@ $$s = \sqrt{\frac{\sum_{i=1}^N (x_i - \overline{x})^2}{N-1} }$$
 
 Additionally, note that in Table 1 we consider the sample standard deviation of the number of horses during the same time span as Figure 1.
 
-![](../results/horse_pops_plot_largest_sd.png)
+![Horse populations for the province with the largest standard deviation](../results/horse_pops_plot_largest_sd.png){#fig-pop2 width=60%}
 
-Figure 2: Horse populations for the province with the largest standard deviation
-
-In Figure 2 we zoom in and look at the province of ???, which had the largest spread of values in terms of standard deviation.
+In @fig-pop2 we zoom in and look at the province of `{python} largest_sd`, which had the largest spread of values in terms of standard deviation.
 
 ## References
